CI: Add deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
-name: Deploy to Production Server
+name: Deploy to Server
 
-# Dieser Workflow wird bei jedem Push auf den 'main'-Branch ausgeführt
 on:
   push:
     branches:
@@ -8,18 +7,18 @@ on:
 
 jobs:
   deploy:
-    # Name des Jobs
-    name: Deploy
-    # Wir führen diesen Job auf einem von GitHub gehosteten Ubuntu-Runner aus
     runs-on: ubuntu-latest
 
     steps:
-      # Schritt 1: SSH-Verbindung aufbauen und Deployment-Skript ausführen
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          script: /root/fussball-trainingsplaner/deploy.sh
+    - name: Deploy to server
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script: |
+          cd /root/temp-fussball
+          git pull origin main
+          npm install
+          pm2 reload football-app
