--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           cd /root/temp-fussball
           git pull origin main
           npm install
-          pm2 reload football-app
+          /root/.nvm/versions/node/v22.17.1/bin/pm2 reload football-app
